--- a/index.html
+++ b/index.html
@@ -224,6 +224,29 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<!-- Firebase -->	
+			<script type="module">
+  			// Import the functions you need from the SDKs you need
+  			import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
+  			import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-analytics.js";
+  			// TODO: Add SDKs for Firebase products that you want to use
+  			// https://firebase.google.com/docs/web/setup#available-libraries
 
+  			// Your web app's Firebase configuration
+  			// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  			const firebaseConfig = {
+    				apiKey: "AIzaSyA3J3dlgI-OhbJNo_WgiBA6Ne7yyYU7noE",
+    				authDomain: "firstpage-dhk.firebaseapp.com",
+    				projectId: "firstpage-dhk",
+    				storageBucket: "firstpage-dhk.appspot.com",
+    				messagingSenderId: "778678759238",
+    				appId: "1:778678759238:web:90997e1428b154f4e53f47",
+    				measurementId: "G-YZBGSTD1JF"
+  			};
+
+  			// Initialize Firebase
+  			const app = initializeApp(firebaseConfig);
+  			const analytics = getAnalytics(app);
+		</script>
 	</body>
 </html>
